--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix front-end",
-    "dev":"concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +20,8 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.18",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0"
