--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.9.18",
     "node-sass": "^4.14.1",
     "react-external-link": "^1.1.1",
+    "react-transition-group": "^4.4.1",
     "request": "^2.88.2",
     "uuid": "^8.1.0"
   },
